test/sema/negative/wrong_arg_num3.impala
fn f(x:int, g:fn(int)->int) -> int {
   g(x, x, x)
}
