test/sema/negative/wrong_arg_num3.output
wrong_arg_num3.impala:2 col 4 - 13: error: wrong number of arguments
